# board75

./: CMakeLists.txt  README.md  basicui.cpp  basicui.h  board.cpp  board.h  board75.kdev4  engine.cpp  engine.h  game.cpp  game.h  global.h  main.c  main.cpp  rules.txt  str_node.h  str_step.h  view2d.cpp  view2d.h
